--- a/coinguild-app/src/css/PawGuild.css
+++ b/coinguild-app/src/css/PawGuild.css
@@ -40,8 +40,18 @@ body {
    background-color: transparent;
    border-color: black;
    border: 1px solid black;
-   width: 500px;
+   width: 300px;
    height: 300px;
-   margin-top: 100px;
+   margin-top: 40px;
+}
+
+.submitBtn {
+    background-color: #FFC107;
+    color: black;
+    font-weight: bolder;
+    border-radius: 25px;
+    width: 100px;
+    height: 40px;
+    margin-top: 20px;
 }
 
